--- a/app/src/App.css
+++ b/app/src/App.css
@@ -82,6 +82,18 @@ body {
 .inputData input {
   width: 80%;
 }
+.validateButton {
+  padding-left: 25px;
+  box-sizing: border-box;
+}
+.validateButton button {
+  width: 80%;
+  background-color: #0e374e;
+  color: white;
+  border-radius: 5px;
+  border: none;
+  padding: 5px;
+}
 .content {
   padding-top: 20px;
   width: 100%;
@@ -176,7 +188,7 @@ body {
   }
   .edit-card {
     height: min-content;
-    width: 20%;
+    width: 100%;
   }
 }
 footer {
